# adventofcode

./: Cargo.toml  README.md
2024/with_elixir/: .gitignore  README.md
2024/with_elixir/lib/: day2.ex  hello.ex  read_input.ex
2024/with_elixir/test/: day1_test.exs  day4_test.exs
2024/with_haskell/: README.md
2024/with_haskell/lib/: Day2.hs  Hello.hs  ReadInput.hs
2024/with_haskell/test/: Day3Spec.hs
2024/with_node/: package-lock.json  package.json
2024/with_node/src/: day1.test.ts  day1.ts  day2.test.ts  day3.test.ts  day4.test.ts  day5.test.ts  day5.ts  main.ts  readInput.ts
2024/with_python/: .gitignore
2024/with_python/src/: day1.py  day3.py  day4.py
2024/with_rust/: Cargo.toml
2025/with_rust/: Cargo.toml
inputs/: README.md
with_elixir/: README.md  mix.exs
with_elixir/lib/: day1.ex  day2.ex  day3.ex  day4.ex  main.ex
with_elixir/test/: day1_test.exs  day2_test.exs  day3_test.exs  hello_test.exs
with_haskell/: CHANGELOG.md  LICENSE  advent-of-code-with-haskell.cabal
with_haskell/app/: Main.hs
with_haskell/lib/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
with_haskell/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  HelloSpec.hs
with_node/: README.md
with_node/src/: day1.test.ts  day1.ts  day2.ts  day3.test.ts  day3.ts  day4.ts  hello.test.ts  hello.ts  main.ts  readInput.ts
with_python/: README.md  pyproject.toml
with_python/src/: day1.py  day2.py  day3.py  hello.py  main.py  readInput.py  read_input.py
with_python/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_hello.py
with_rust/: Cargo.toml  README.md
with_rust/src/: day1.rs  day2.rs  day3.rs  main.rs
(+13 files in other folders)
