[tool.poetry]
name = "advent-of-code-with-python"
version = "0.1.0"
description = ""
authors = ["Maeevick <maeevick@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies] 
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
